added scroll instruction for user guide

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
           },
           animation: {
-        scroll: "scroll 25s linear infinite",
+        scroll: "scroll 15s linear infinite",
         pause: "none",
           },
         },
@@ -123,6 +123,9 @@
 </div>
 </header>
 <main>
+  <div class="flex justify-center items-center">
+    <p class="mt-4 text-text-light dark:text-text-muted-dark text-center"><i>Tap scroll area to pause or play</i></p>
+  </div>
 <section class="py-16 sm:py-24">
 <div class="mx-auto max-w-7xl px-4">
 <h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">Are You?</h2>
